<resources>
    <string name="app_name">Shiba_Inu_app</string>

    <string name="facebook">FaceBook回文</string>
    <string name="rewardPoints">懸賞點數 20</string>
    <string name="needToMove">需要搬家</string>
    <string name="area">地點:淡水區</string>
    <string name="time">時間:一個月內</string>
    <string name="budget">預算:兩千以內</string>
    <string name="privateChat">私聊:</string>

    <string name="humanResources">人力資源</string>
    <string name="outsourcing">外包接案</string>
    <string name="littleThingsInLife">生活小事</string>
    <string name="expandConnections">拓展人脈</string>
    <string name="learnNewKnowledge">學習新知</string>
    <string name="petBoarding">寵物寄養</string>
    <string name="buyOnBehalfOf">代買代購</string>
    <string name="merchandiseSales">商品販賣</string>
    <string name="otherCategories">其他分類</string>


    <string name="select_region_dialog_title">Spinner 對話視窗標題</string>
    <string-array name="spn_list">
        <item>類型</item>
        <item>選項1</item>
        <item>選項2</item>
        <item>選項3</item>
        <item>選項4</item>
    </string-array>

    <string name="select_region_dialog_title2">Spinner 對話視窗標題</string>
    <string-array name="spn_list2">
        <item>依照排序</item>
        <item>選項1</item>
        <item>選項2</item>
        <item>選項3</item>
        <item>選項4</item>
    </string-array>
</resources>